Initial first change

--- a/index.html
+++ b/index.html
@@ -2,8 +2,7 @@
 <html>
 
 <head>
-  <link href="MyWebsiteStyle.css" rel="stylesheet" type="text/css">
-  <link ref: refs/heads/master />
+  <link href="style.css" rel="stylesheet" type="text/css">
 </head>
 
 <body>
