--- a/index.html
+++ b/index.html
@@ -2,11 +2,12 @@
 <html>
 
 <head>
+  <link href="css/bootstrap.css" rel="stylesheet" type="text/css">
   <link href="style.css" rel="stylesheet" type="text/css">
 </head>
 
 <body>
-  <div class=title>
+  <div class=container>
     <h1>My first website</h1>
   </div>
 </body>
