--- a/index.html
+++ b/index.html
@@ -6,12 +6,12 @@
   <title>Love</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link href="css/bootstrap.css" rel="stylesheet" type="text/css">
+  <link href="css/bootstrap-grid.css" rel="stylesheet" type="text/css">
   <link href="style.css" rel="stylesheet" type="text/css">
 </head>
 
 <body>
   <div class=container>
-    <h1>My first website</h1>
+    <h1>Is this a container ?</h1>
   </div>
 </body>
