--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
 </head>
 
 <body>
-  <div class=container>
+  <div class="container">
     <h1>Is this a container ?</h1>
+    <button type="button" class="btn btn-warning">Warning</button>
   </div>
 </body>
