--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 <body>
   <div class="container">
-    <h1>Is this a container ?</h1>
-    <button type="button" class="btn btn-warning">Warning</button>
+    <h1>What is love ?</h1>
+    <a type="button" class="btn btn-warning">This ?</a>
   </div>
 </body>
