--- a/index.html
+++ b/index.html
@@ -6,13 +6,13 @@
   <title>Love</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link href="css/bootstrap-grid.css" rel="stylesheet" type="text/css">
+  <link href="bootstrap.css" rel="stylesheet" type="text/css">
   <link href="style.css" rel="stylesheet" type="text/css">
 </head>
 
 <body>
   <div class="container">
     <h1>What is love ?</h1>
-    <a type="button" class="btn btn-warning">This ?</a>
+    <a href="https://fr.wikipedia.org/wiki/Love" type="button" class="btn btn-warning">This ?</a>
   </div>
 </body>
