--- a/index.html
+++ b/index.html
@@ -6,12 +6,12 @@
   <title>Love</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link href="bootstrap.css" rel="stylesheet" type="text/css">
+  <link href="bootstrap.css" rel="stylesheet">
   <link href="style.css" rel="stylesheet" type="text/css">
 </head>
 
 <body>
-  <div class="container">
+  <div class="container header">
     <h1>What is love ?</h1>
     <a href="https://fr.wikipedia.org/wiki/Love" type="button" class="btn btn-warning">This ?</a>
   </div>
