--- a/index.html
+++ b/index.html
@@ -14,6 +14,6 @@
   <div class="container header">
     <h1>What is love ?</h1>
     <a href="https://fr.wikipedia.org/wiki/Love" type="button" class="btn btn-warning">This ?</a>
-    <img href="images.Love.png" target=_blank />
+    <img href="images/Love.png" target=_blank />
   </div>
 </body>
