--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
   <div class="container header">
     <h1>What is love ?</h1>
-    <a href="https://fr.wikipedia.org/wiki/Love" type="button" class="btn btn-warning">This ?</a>
-    <img href="images/Love.png" target=_blank />
+    <a href="https://fr.wikipedia.org/wiki/Love" target="_blank" type="button" class="btn btn-warning">This ?</a>
+    <img src="images/Love.png" />
   </div>
 </body>
