--- a/index.html
+++ b/index.html
@@ -1,19 +1,25 @@
 <!DOCTYPE html>
 <html>
-<html lang="en">
 
 <head>
-  <title>Love</title>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link href="bootstrap.css" rel="stylesheet">
-  <link href="style.css" rel="stylesheet" type="text/css">
+  <title>Sophie Madonna</title>
+  <link rel="stylesheet" type="text/css" href="style.css">
+
 </head>
 
 <body>
-  <div class="container header">
-    <h1>What is love ?</h1>
-    <a href="https://fr.wikipedia.org/wiki/Love" target="_blank" type="button" class="btn btn-warning">This ?</a>
-    <img src="images/Love.png" />
-  </div>
-</body>
+  <h1>Sophie Madonna</h1>
+  <h2>Voir le monde autrement</h2>
+  <br>
+  <img src="./imagesSophie/IMG_9885.jpg" alt="Laobeer contemplation" />
+  <img src="./imagesSophie/IMG_9955.jpg" alt="Coucher de soleil sur la Thaïland" />
+  <img src="./imagesSophie/_MG_1303.jpg" alt"Volcan" />
+  <img src="./imagesSophie/_MG_0512.jpg" alt="Torent dans la foret" />
+  <img src="./imagesSophie/_MG_0555.jpg" alt="Cascade dans la foret" />
+  <img src="./imagesSophie/_MG_0557.jpg" alt="Train qui passe dans la foret" />
+  <img src="./imagesSophie/_MG_0018.jpg" alt="Reflet dans un bord de fenêtre">
+  <img src="./imagesSophie/_MG_0238.jpg" alt="Reflet de ville sur un mur de clés">
+  <img src="./imagesSophie/_MG_0282.jpg" alt="Machine à écrire" />
+
+
+</html>
