--- a/index.html
+++ b/index.html
@@ -11,7 +11,16 @@
   <h1>Sophie Madonna</h1>
   <h2>Voir le monde autrement</h2>
   <br>
-
+  <img src="./imagesSophie/IMG_9885.jpg" alt="Laobeer contemplation" />
+  <img src="./imagesSophie/IMG_9955.jpg" alt="Coucher de soleil sur la Thaïland" />
+  <img src="./imagesSophie/_MG_1303.jpg" alt"Volcan" />
+  <img src="./imagesSophie/_MG_0512.jpg" alt="Torent dans la foret" />
+  <img src="./imagesSophie/_MG_0555.jpg" alt="Cascade dans la foret" />
+  <img src="./imagesSophie/_MG_0557.jpg" alt="Train qui passe dans la foret" />
+  <img src="./imagesSophie/_MG_0018.jpg" alt="Reflet dans un bord de fenêtre">
+  <img src="./imagesSophie/_MG_0238.jpg" alt="Reflet de ville sur un mur de clés">
+  <img src="./imagesSophie/_MG_0282.jpg" alt="Machine à écrire" />
+</body>
 
 
 </html>
