--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
   <h1>Sophie Madonna</h1>
   <h2>Voir le monde autrement</h2>
   <br>
-  <img src="./imagesSophie/IMG_9885.JPG" alt="Laobeer contemplation" />
-  <img src="./imagesSophie/IMG_9955.JPG" alt="Coucher de soleil sur la Thaïland" />
+  <img src="imagesSophie/IMG_9885.jpg" alt="Laobeer contemplation" />
+  <img src="imagesSophie/IMG_9955.jpg" alt="Coucher de soleil sur la Thaïland" />
   <img src="./imagesSophie/_MG_1303.jpg" alt"Volcan" />
   <img src="./imagesSophie/_MG_0512.jpg" alt="Torent dans la foret" />
   <img src="./imagesSophie/_MG_0555.jpg" alt="Cascade dans la foret" />
