Ultimate image fix

--- a/index.html
+++ b/index.html
@@ -11,16 +11,15 @@
   <h1>Sophie Madonna</h1>
   <h2>Voir le monde autrement</h2>
   <br>
-  <img src="BjMrq.github.io/ImagesSophie/IMG_9885.jpg
-      " alt="Laobeer contemplation" />
+  <img src="/ImagesSophie/IMG_9885.jpg" alt="Laobeer contemplation" />
   <img src="/ImagesSophie/IMG_9955.jpg" alt="Coucher de soleil sur la Thaïland" />
-  <img src="/ImagesSophie/_MG_1303.jpg" alt"Volcan" />
-  <img src="/ImagesSophie/_MG_0512.jpg" alt="Torent dans la foret" />
-  <img src="/ImagesSophie/_MG_0555.jpg" alt="Cascade dans la foret" />
-  <img src="/ImagesSophie/_MG_0557.jpg" alt="Train qui passe dans la foret" />
-  <img src="/ImagesSophie/_MG_0018.jpg" alt="Reflet dans un bord de fenêtre">
-  <img src="/ImagesSophie/_MG_0238.jpg" alt="Reflet de ville sur un mur de clés">
-  <img src="/ImagesSophie/_MG_0282.jpg" alt="Machine à écrire" />
+  <img src="/ImagesSophie/IMG_1303.jpg" alt"Volcan" />
+  <img src="/ImagesSophie/IMG_0512.jpg" alt="Torent dans la foret" />
+  <img src="/ImagesSophie/IMG_0555.jpg" alt="Cascade dans la foret" />
+  <img src="/ImagesSophie/IMG_0557.jpg" alt="Train qui passe dans la foret" />
+  <img src="/ImagesSophie/IMG_0018.jpg" alt="Reflet dans un bord de fenêtre">
+  <img src="/ImagesSophie/IMG_0238.jpg" alt="Reflet de ville sur un mur de clés">
+  <img src="/ImagesSophie/IMG_0282.jpg" alt="Machine à écrire" />
 </body>
 
 
