--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <title>Sophie Madonna</title>
   <link rel="stylesheet" type="text/css" href="style.css">
-  <link rel="icon" type="image/png" href="/ImageSophie/Sophie.jpg" />
+  <link rel="icon" type="image/png" href="/ImageSophie/Sophie.png" />
 </head>
 
 <body>
