--- a/index.html
+++ b/index.html
@@ -3,8 +3,9 @@
 
 <head>
   <title>Sophie Madonna</title>
+  <link rel="stylesheet" type="text/css" href="bootstrap.css">
   <link rel="stylesheet" type="text/css" href="style.css">
-  <link rel="icon" type="image/png" href="/ImageSophie/Sophie.png" />
+  <link rel="icon" type="image/png" href="/ImagesSophie/Sophie.png" />
 </head>
 
 <body>
@@ -20,6 +21,11 @@
   <img src="/ImagesSophie/IMG_0018.jpg" alt="Reflet dans un bord de fenêtre">
   <img src="/ImagesSophie/IMG_0238.jpg" alt="Reflet de ville sur un mur de clés">
   <img src="/ImagesSophie/IMG_0282.jpg" alt="Machine à écrire" />
+
+  <!-- jQuery -->
+  <script src="jquery-3.3.1.js"></script>
+  <!-- Bootstrap -->
+  <script src="/bootstrap.js"></script>
 </body>
 
 
