--- a/index.html
+++ b/index.html
@@ -3,29 +3,86 @@
 
 <head>
   <title>Sophie Madonna</title>
+
   <link rel="stylesheet" type="text/css" href="bootstrap.css">
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU" crossorigin="anonymous">
   <link rel="stylesheet" type="text/css" href="style.css">
-  <link rel="icon" type="image/png" href="/ImagesSophie/Sophie.png" />
+  <link rel="icon" type="image/png" href="./ImagesSophie/Sophie.png" />
 </head>
 
 <body>
-  <h1>Sophie Madonna</h1>
-  <h2>Voir le monde autrement</h2>
-  <br>
-  <img src="/ImagesSophie/IMG_9885.jpg" alt="Laobeer contemplation" />
-  <img src="/ImagesSophie/IMG_9955.jpg" alt="Coucher de soleil sur la Thaïland" />
-  <img src="/ImagesSophie/IMG_1303.jpg" alt"Volcan" />
-  <img src="/ImagesSophie/IMG_0512.jpg" alt="Torent dans la foret" />
-  <img src="/ImagesSophie/IMG_0555.jpg" alt="Cascade dans la foret" />
-  <img src="/ImagesSophie/IMG_0557.jpg" alt="Train qui passe dans la foret" />
-  <img src="/ImagesSophie/IMG_0018.jpg" alt="Reflet dans un bord de fenêtre">
-  <img src="/ImagesSophie/IMG_0238.jpg" alt="Reflet de ville sur un mur de clés">
-  <img src="/ImagesSophie/IMG_0282.jpg" alt="Machine à écrire" />
+  <nav class="navbar navbar-light navbar-expand-md fixed-top" style="background-color: #563d7c;">
+    <a class="navbar-brand navTitle" href="#"><span class="fas fa-camera-retro"></span> Sophie Madonna</a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+
+    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+      <ul class="navbar-nav mr-auto">
+        <li class="nav-item active">
+          <a class="nav-link" href="#">About Me<span class="sr-only">(current)</span></a>
+        </li>
+
+        <li class="nav-item active">
+          <a class="nav-link" href="#">Contact<span class="sr-only">(current)</span></a>
+        </li>
+
+        <li class="nav-item dropdown">
+          <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            Picture Category
+          </a>
+          <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+            <a class="dropdown-item" href="#">Thaïland</a>
+            <a class="dropdown-item" href="#">Jungle</a>
+            <a class="dropdown-item" href="#">Reflexions</a>
+          </div>
+        </li>
+      </ul>
+    </div>
+  </nav>
+
+  <div class="jumbotron">
+    <div class="intro">
+      <h2> See the world from another eye</h2>
+    </div>
+  </div>
+  <div class="container">
+    <div class="row">
+      <div class="col-lg-4 col-sm-6">
+        <img class="rounded img-thumbnail" src="./ImagesSophie/IMG_9885.jpg" alt="Laobeer contemplation" />
+      </div>
+      <div class="col-lg-4 col-sm-6">
+        <img class="rounded img-thumbnail" src="./ImagesSophie/IMG_9955.jpg" alt="Thaíland sunset" />
+      </div>
+      <div class="col-lg-4 col-sm-6">
+        <img class="rounded img-thumbnail" src="./ImagesSophie/IMG_1303.jpg" alt="Volcano mist" />
+      </div>
+      <div class="col-lg-4 col-sm-6">
+        <img class="rounded img-thumbnail" src="./ImagesSophie/IMG_0512.jpg" alt="Torent in the jungle" />
+      </div>
+      <div class="col-lg-4 col-sm-6">
+        <img class="rounded img-thumbnail" src="./ImagesSophie/IMG_0555.jpg" alt="Jungle Shower" />
+      </div>
+      <div class="col-lg-4 col-sm-6">
+        <img class="rounded img-thumbnail" src="./ImagesSophie/IMG_0557.jpg" alt="Jungle train" />
+      </div>
+      <div class="col-lg-4 col-sm-6">
+        <img class="rounded img-thumbnail" src="./ImagesSophie/IMG_0018.jpg" alt="Window reflection" />
+      </div>
+      <div class="col-lg-4 col-sm-6">
+        <img class="rounded img-thumbnail" src="./ImagesSophie/IMG_0238.jpg" alt="City reflexion" />
+      </div>
+      <div class="col-lg-4 col-sm-6">
+        <img class="rounded img-thumbnail" src="./ImagesSophie/IMG_0282.jpg" alt="Old Typwriter" />
+      </div>
+    </div>
+  </div>
+
 
   <!-- jQuery -->
-  <script src="jquery-3.3.1.js"></script>
+  <script src="./jquery-3.3.1.js"></script>
   <!-- Bootstrap -->
-  <script src="/bootstrap.js"></script>
+  <script src="./bootstrap.js"></script>
 </body>
 
 
