--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 <body>
   <nav class="navbar navbar-light navbar-expand-md fixed-top" style="background-color: #563d7c;">
-    <a class="navbar-brand navTitle" href="#"><span class="fas fa-camera-retro"></span> Sophie Madonna</a>
+    <a class="navbar-brand navTitle" href="index.html"><span class="fas fa-camera-retro"></span>&nbsp; Sophie Madonna</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
@@ -20,11 +20,11 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav mr-auto">
         <li class="nav-item active">
-          <a class="nav-link" href="#">About Me<span class="sr-only">(current)</span></a>
+          <a class="nav-link" href="about.html">About Me<span class="sr-only">(current)</span></a>
         </li>
 
         <li class="nav-item active">
-          <a class="nav-link" href="#">Contact<span class="sr-only">(current)</span></a>
+          <a class="nav-link" href="contact.html">Contact<span class="sr-only">(current)</span></a>
         </li>
 
         <li class="nav-item dropdown">
@@ -42,9 +42,7 @@
   </nav>
 
   <div class="jumbotron">
-    <div class="intro">
-      <h2> See the world from another eye</h2>
-    </div>
+    <h2> <span class="intro">See the world from another eye </span></h2>
   </div>
   <div class="container">
     <div class="row">
