--- a/about.html
+++ b/about.html
@@ -42,10 +42,11 @@
   </nav>
 
   <div class="jumbotron">
-    <h2> <span class="intro">About me </span></h2>
+    <h2 class="intro">A little bit about who I am </h2>
+    <hr>
   </div>
   <div class="container">
-    <h1>A little bit about myself and how i came to love photography!</h1>
+    <h1>How i came to love photography!</h1>
     <br>
     <p>I was born 1988
       <br>
