--- a/contact.html
+++ b/contact.html
@@ -42,7 +42,8 @@
   </nav>
 
   <div class="jumbotron">
-    <h2> <span class="intro">Contact </span></h2>
+    <h2 class="intro"> Contact me for anything</h2>
+    <hr>
   </div>
   <div class="container">
     <h1>Find me on social media!</h1>
