--- a/index.html
+++ b/index.html
@@ -42,7 +42,8 @@
   </nav>
 
   <div class="jumbotron">
-    <h2> <span class="intro">See the world from another eye </span></h2>
+    <h2 class="intro">See the world from another eye</h2>
+    <hr>
   </div>
   <div class="container">
     <div class="row">
