--- a/contact.html
+++ b/contact.html
@@ -2,6 +2,8 @@
 <html>
 
 <head>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+
   <title>Sophie Madonna</title>
 
   <link rel="stylesheet" type="text/css" href="bootstrap.css">
