--- a/about.html
+++ b/about.html
@@ -49,7 +49,7 @@
     <hr>
   </div>
   <div class="container">
-    <h1>How i came to love photography!</h1>
+    <h1 class="display-5">How i came to love photography!</h1>
     <br>
     <p>I was born 1988
       <br>
