--- a/contact.html
+++ b/contact.html
@@ -49,7 +49,7 @@
     <hr>
   </div>
   <div class="container">
-    <h1>Find me on social media!</h1>
+    <h1 class="display-5">Find me on social media!</h1>
     <br>
 
   </div>
