--- a/about.html
+++ b/about.html
@@ -59,6 +59,10 @@
       <br>
       And now we are.
     </p>
+    <blockquote class="blockquote text-center">
+      <p class="mb-0">“I live not in dreams but in contemplation of a reality that is perhaps the future.” </p>
+      <footer class="blockquote-footer">Rainer Maria Rilke</footer>
+    </blockquote>
   </div>
 
 
