--- a/about.html
+++ b/about.html
@@ -65,7 +65,14 @@
       <footer class="blockquote-footer">Rainer Maria Rilke</footer>
     </blockquote>
   </div>
-
+  <!-- Footer -->
+  <br>
+  <footer class="page-footer font-small blue">
+    <!-- Copyright -->
+    <div class="footer-copyright text-center py-3">© 2018 Copyright:
+      <a href="https://www.benjamin-marketing-resume.com/"> Benjamin Marquis</a>
+    </div>
+  </footer>
 
   <!-- jQuery -->
   <script src="./jquery-3.3.1.js"></script>
