--- a/index.html
+++ b/index.html
@@ -79,6 +79,17 @@
       </div>
     </div>
   </div>
+  <!-- Footer -->
+  <br>
+  <footer class="page-footer font-small blue">
+
+    <!-- Copyright -->
+    <div class="footer-copyright text-center py-3">© 2018 Copyright:
+      <a href="https://www.benjamin-marketing-resume.com/"> Benjamin Marquis</a>
+    </div>
+    <!-- Copyright -->
+
+  </footer>
 
 
   <!-- jQuery -->
