--- a/contact.html
+++ b/contact.html
@@ -51,9 +51,15 @@
   <div class="container">
     <h1 class="display-5">Find me on social media!</h1>
     <br>
-
   </div>
-
+  <!-- Footer -->
+  <br>
+  <footer class="page-footer font-small blue">
+    <!-- Copyright -->
+    <div class="footer-copyright text-center py-3">© 2018 Copyright:
+      <a href="https://www.benjamin-marketing-resume.com/"> Benjamin Marquis</a>
+    </div>
+  </footer>
 
   <!-- jQuery -->
   <script src="./jquery-3.3.1.js"></script>
