--- a/index.html
+++ b/index.html
@@ -81,14 +81,11 @@
   </div>
   <!-- Footer -->
   <br>
-  <footer class="page-footer font-small blue">
-
+  <footer class="page-footer font-small">
     <!-- Copyright -->
     <div class="footer-copyright text-center py-3">© 2018 Copyright:
       <a href="https://www.benjamin-marketing-resume.com/"> Benjamin Marquis</a>
     </div>
-    <!-- Copyright -->
-
   </footer>
 
 
