--- a/about.html
+++ b/about.html
@@ -14,7 +14,7 @@
 </head>
 
 <body>
-  <nav class="navbar navbar-light navbar-expand-md fixed-top" style="background-color: #563d7c;">
+  <nav class="navbar navbar-light navbar-expand-sm fixed-top" style="background-color: #563d7c;">
     <a class="navbar-brand navTitle" href="index.html"><span class="fas fa-camera-retro"></span>&nbsp; Sophie Madonna</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
@@ -67,7 +67,7 @@
   </div>
   <!-- Footer -->
   <br>
-  <footer class="page-footer font-small blue">
+  <footer class="page-footer font-small">
     <!-- Copyright -->
     <div class="footer-copyright text-center py-3">© 2018 Copyright:
       <a href="https://www.benjamin-marketing-resume.com/"> Benjamin Marquis</a>
