--- a/about.html
+++ b/about.html
@@ -45,7 +45,7 @@
   </nav>
 
   <div class="jumbotron">
-    <h2 class="intro display-4">A little bit about who I am </h2>
+    <h2 class="intro display-2">A&nbsp; little&nbsp; bit&nbsp; about&nbsp; me </h2>
     <hr>
   </div>
   <div class="container">
