--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
   </nav>
 
   <div class="jumbotron">
-    <h2 class="intro display-4">See the world from another eye</h2>
+    <h2 class="intro display-2">See &nbsp;the &nbsp;world&nbsp; from &nbsp;another&nbsp; eye</h2>
     <hr>
   </div>
   <div class="container">
