--- a/contact.html
+++ b/contact.html
@@ -45,7 +45,7 @@
   </nav>
 
   <div class="jumbotron">
-    <h2 class="intro display-4"> Reach out to me</h2>
+    <h2 class="intro display-2"> Reach &nbsp;out &nbsp;to&nbsp; me</h2>
     <hr>
   </div>
   <div class="container">
