--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
   <footer class="page-footer font-small">
     <!-- Copyright -->
     <div class="footer-copyright text-center py-3">© 2018 Copyright:
-      <a href="https://www.benjamin-marketing-resume.com/"> Benjamin Marquis</a>
+      <a href="https://www.benjamin-marketing-resume.com/"> Benjamin Marquis </a> © 2018 Font-Copyright: <a href="https://pixelify.net/downloads/tahu-free-script-font/"> Rizal Khurasan</a>
     </div>
   </footer>
 
