Added insta feed

--- a/contact.html
+++ b/contact.html
@@ -21,7 +21,7 @@
       <a class="navbar-brand navTitle" href="index.html"><span class="fas fa-camera-retro"></span>&nbsp; Sophie Madonna</a>
       <a class="navbar-brand-two mx-auto d-lg-none d-inline-block" href="#">
       </a>
-      <div class="w-25 text-right">
+      <div class="w-100 text-right">
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#myNavbar">
           <span class="navbar-toggler-icon"></span>
         </button>
@@ -47,6 +47,12 @@
     <h1 class="display-5">Find me on social media!</h1>
     <br>
   </div>
+  <div class="container">
+    <div class='sk-instagram-feed' data-embed-id='17201'></div>
+  </div>
+
+
+
   <!-- Footer -->
   <br>
   <footer class="page-footer font-small">
@@ -62,6 +68,9 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
   <!-- Bootstrap -->
   <script src="./bootstrap.js"></script>
+  <!-- Instafeed -->
+  <script src='https://www.sociablekit.com/app/embed/instagram-feed/widget.js'></script>
+
 </body>
 
 
