menu title changed

--- a/contact.html
+++ b/contact.html
@@ -30,21 +30,21 @@
     <div class="collapse navbar-collapse text-right" id="myNavbar">
       <ul class="navbar-nav ml-auto flex-nowrap">
         <li class="nav-item">
-          <a href="about.html" class="nav-link m-2 menu-item nav-active">About Me</a>
+          <a href="about.html" class="nav-link m-2 menu-item nav-active">My Story</a>
         </li>
         <li class="nav-item">
-          <a href="contact.html" class="nav-link m-2 menu-item">Contact</a>
+          <a href="contact.html" class="nav-link m-2 menu-item">Follow Me</a>
         </li>
       </ul>
     </div>
   </nav>
 
   <div class="jumbotron">
-    <h2 class="intro display-2"> Reach &nbsp;out &nbsp;to&nbsp; me</h2>
+    <h2 class="intro display-2"> Find&nbsp; Me&nbsp; On&nbsp; Social&nbsp; Media</h2>
     <hr>
   </div>
   <div class="container">
-    <h1 class="display-5">Find me on social media!</h1>
+    <h1 class="display-5"></h1>
     <br>
   </div>
   <div class="container">
