--- a/index.html
+++ b/index.html
@@ -30,10 +30,10 @@
     <div class="collapse navbar-collapse text-right" id="myNavbar">
       <ul class="navbar-nav ml-auto flex-nowrap">
         <li class="nav-item">
-          <a href="about.html" class="nav-link m-2 menu-item nav-active">About Me</a>
+          <a href="about.html" class="nav-link m-2 menu-item nav-active">My Story</a>
         </li>
         <li class="nav-item">
-          <a href="contact.html" class="nav-link m-2 menu-item">Contact</a>
+          <a href="contact.html" class="nav-link m-2 menu-item">Follow Me</a>
         </li>
       </ul>
     </div>
