--- a/index.html
+++ b/index.html
@@ -16,7 +16,8 @@
 <body>
   <nav class="navbar navbar-light navbar-expand-sm fixed-top" style="background-color: #563d7c;">
     <div class="d-flex">
-      <span class="w-100 d-lg-none d-block"></span>
+      <span class="w-100 d-lg-none d-block">
+        <!-- hidden spacer to center brand on mobile --></span>
       <a class="navbar-brand navTitle" href="index.html"><span class="fas fa-camera-retro"></span>&nbsp; Sophie Madonna</a>
       <a class="navbar-brand-two mx-auto d-lg-none d-inline-block" href="#">
       </a>
@@ -27,7 +28,7 @@
       </div>
     </div>
     <div class="collapse navbar-collapse text-right" id="myNavbar">
-      <ul class="navbar-nav flex-nowrap">
+      <ul class="navbar-nav ml-auto">
         <li class="nav-item">
           <a href="about.html" class="nav-link m-2 menu-item nav-active">My Story</a>
         </li>
