--- a/index.html
+++ b/index.html
@@ -21,14 +21,14 @@
       <a class="navbar-brand navTitle" href="index.html"><span class="fas fa-camera-retro"></span>&nbsp; Sophie Madonna</a>
       <a class="navbar-brand-two mx-auto d-lg-none d-inline-block" href="#">
       </a>
-      <div class="w-100 text-right">
+      <div class="w-25 text-right">
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#myNavbar">
           <span class="navbar-toggler-icon"></span>
         </button>
       </div>
     </div>
     <div class="collapse navbar-collapse text-right" id="myNavbar">
-      <ul class="navbar-nav ml-auto">
+      <ul class="navbar-nav ml-auto flex-nowrap">
         <li class="nav-item">
           <a href="about.html" class="nav-link m-2 menu-item nav-active">My Story</a>
         </li>
