--- a/contact.html
+++ b/contact.html
@@ -27,7 +27,7 @@
         </button>
       </div>
     </div>
-    <div class="collapse navbar-collapse text-right" id="myNavbar">
+    <div class="collapse navbar-collapse" id="myNavbar">
       <ul class="navbar-nav ml-auto flex-nowrap">
         <li class="nav-item">
           <a href="about.html" class="nav-link m-2 menu-item nav-active">My Story</a>
