--- a/about.html
+++ b/about.html
@@ -8,7 +8,7 @@
   <title>About Sophie Madonna</title>
 
   <link rel="stylesheet" type="text/css" href="bootstrap.css">
-  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU" crossorigin="anonymous">
+  <link rel="stylesheet" href="static/styles/fontawesome/css/all.css">
   <link rel="stylesheet" type="text/css" href="style.css">
   <link rel="icon" type="image/png" href="./ImagesSophie/Sophie.png" />
 </head>
@@ -73,11 +73,11 @@
   </footer>
 
   <!-- jQuery -->
-  <script src="./jquery-3.3.1.js"></script>
+  <script src="./JavaScript/jquery-3.3.1.js"></script>
   <!-- Cloudflare -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
   <!-- Bootstrap -->
-  <script src="./bootstrap.js"></script>
+  <script src="./JavaScript/bootstrap.js"></script>
 </body>
 
 
