--- a/about.html
+++ b/about.html
@@ -39,10 +39,10 @@
     </div>
   </nav>
 
-  <div class="jumbotron">
-    <h2 class="intro display-2">Somme&nbsp; Bio&nbsp; Infos</h2>
+  <section id="header" class="jumbotron">
+    <h1 class="intro display-2">Somme&nbsp; Bio&nbsp; Infos</h1>
     <hr>
-  </div>
+  </section>
   <div class="container">
     <br>
     <h1 class="display-5">How i came to love photography!</h1>
