--- a/contact.html
+++ b/contact.html
@@ -39,10 +39,10 @@
     </div>
   </nav>
 
-  <div class="jumbotron">
-    <h2 class="intro display-2"> Find&nbsp; Me&nbsp; On&nbsp; Social&nbsp; Media</h2>
+  <section id="header" class="jumbotron">
+    <h1 class="intro display-2"> Find&nbsp; Me&nbsp; On&nbsp; Social&nbsp; Media</h1>
     <hr>
-  </div>
+  </section>
   <div class="container">
     <h1 class="display-5"></h1>
     <br>
