--- a/index.html
+++ b/index.html
@@ -40,10 +40,10 @@
   </nav>
 
 
-  <div class="jumbotron">
-    <h2 class="intro display-2">See &nbsp;the &nbsp;World&nbsp; From &nbsp;Another&nbsp; Eye</h2>
+  <section id="header" class="jumbotron">
+    <h1 class="intro display-2">See &nbsp;the &nbsp;World&nbsp; From &nbsp;Another&nbsp; Eye</h1>
     <hr>
-  </div>
+  </section>
   <div class="container">
     <div class="row">
       <div class="col-lg-4 col-sm-6">
