--- a/index.html
+++ b/index.html
@@ -44,37 +44,38 @@
     <h1 class="intro display-2">See &nbsp;the &nbsp;World&nbsp; From &nbsp;Another&nbsp; Eye</h1>
     <hr>
   </section>
-  <div class="container">
+
+  <section id="gallery" class="container">
     <div class="row">
       <div class="col-lg-4 col-sm-6">
-        <img class="rounded img-thumbnail" src="./ImagesSophie/IMG_9885.jpg" alt="Laobeer contemplation" />
+        <img class="rounded img-thumbnail" src="./ImagesSophie/IMG_9885.jpg" alt="Laobeer contemplation" oncontextmenu="return false;" />
       </div>
       <div class="col-lg-4 col-sm-6">
-        <img class="rounded img-thumbnail" src="./ImagesSophie/IMG_9955.jpg" alt="Thaíland sunset" />
+        <img class="rounded img-thumbnail " src="./ImagesSophie/IMG_9955.jpg" alt="Thaíland sunset" oncontextmenu="return false;" />
       </div>
       <div class="col-lg-4 col-sm-6">
-        <img class="rounded img-thumbnail" src="./ImagesSophie/IMG_1303.jpg" alt="Volcano mist" />
+        <img class="rounded img-thumbnail" src="./ImagesSophie/IMG_1303.jpg" alt="Volcano mist" oncontextmenu="return false;" />
       </div>
       <div class="col-lg-4 col-sm-6">
-        <img class="rounded img-thumbnail" src="./ImagesSophie/IMG_0512.jpg" alt="Torent in the jungle" />
+        <img class="rounded img-thumbnail" src="./ImagesSophie/IMG_0512.jpg" alt="Torent in the jungle" oncontextmenu="return false;" />
       </div>
       <div class="col-lg-4 col-sm-6">
-        <img class="rounded img-thumbnail" src="./ImagesSophie/IMG_0555.jpg" alt="Jungle Shower" />
+        <img class="rounded img-thumbnail" src="./ImagesSophie/IMG_0555.jpg" alt="Jungle Shower" oncontextmenu="return false;" />
       </div>
       <div class="col-lg-4 col-sm-6">
-        <img class="rounded img-thumbnail" src="./ImagesSophie/IMG_0557.jpg" alt="Jungle train" />
+        <img class="rounded img-thumbnail" src="./ImagesSophie/IMG_0557.jpg" alt="Jungle train" oncontextmenu="return false;" />
       </div>
       <div class="col-lg-4 col-sm-6">
-        <img class="rounded img-thumbnail" src="./ImagesSophie/IMG_0018.jpg" alt="Window reflection" />
+        <img class="rounded img-thumbnail" src="./ImagesSophie/IMG_0018.jpg" alt="Window reflection" oncontextmenu="return false;" />
       </div>
       <div class="col-lg-4 col-sm-6">
-        <img class="rounded img-thumbnail" src="./ImagesSophie/IMG_0238.jpg" alt="City reflexion" />
+        <img class="rounded img-thumbnail" src="./ImagesSophie/IMG_0238.jpg" alt="City reflexion" oncontextmenu="return false;" />
       </div>
       <div class="col-lg-4 col-sm-6">
-        <img class="rounded img-thumbnail" src="./ImagesSophie/IMG_0282.jpg" alt="Old Typwriter" />
+        <img class="rounded img-thumbnail" src="./ImagesSophie/IMG_0282.jpg" alt="Old Typwriter" oncontextmenu="return false;" />
       </div>
     </div>
-  </div>
+  </section>
 
 
   <!-- Footer -->
