carded the images

--- a/index.html
+++ b/index.html
@@ -47,32 +47,50 @@
 
   <section id="gallery" class="container">
     <div class="row">
-      <div class="col-lg-4 col-sm-6">
-        <img class="rounded img-thumbnail" src="./ImagesSophie/IMG_9885.jpg" alt="Laobeer contemplation" oncontextmenu="return false;" />
+      <div class="col-lg-4 col-sm-6 mb-4">
+        <div class="card">
+          <img class="rounded img-thumbnail" src="./ImagesSophie/IMG_9885.jpg" alt="Laobeer contemplation" oncontextmenu="return false;" />
+        </div>
       </div>
-      <div class="col-lg-4 col-sm-6">
-        <img class="rounded img-thumbnail " src="./ImagesSophie/IMG_9955.jpg" alt="Thaíland sunset" oncontextmenu="return false;" />
+      <div class="col-lg-4 col-sm-6 mb-4">
+        <div class="card">
+          <img class="rounded img-thumbnail " src="./ImagesSophie/IMG_9955.jpg" alt="Thaíland sunset" oncontextmenu="return false;" />
+        </div>
       </div>
-      <div class="col-lg-4 col-sm-6">
-        <img class="rounded img-thumbnail" src="./ImagesSophie/IMG_1303.jpg" alt="Volcano mist" oncontextmenu="return false;" />
+      <div class="col-lg-4 col-sm-6 mb-4">
+        <div class="card">
+          <img class="rounded img-thumbnail" src="./ImagesSophie/IMG_1303.jpg" alt="Volcano mist" oncontextmenu="return false;" />
+        </div>
       </div>
-      <div class="col-lg-4 col-sm-6">
-        <img class="rounded img-thumbnail" src="./ImagesSophie/IMG_0512.jpg" alt="Torent in the jungle" oncontextmenu="return false;" />
+      <div class="col-lg-4 col-sm-6 mb-4">
+        <div class="card">
+          <img class="rounded img-thumbnail" src="./ImagesSophie/IMG_0512.jpg" alt="Torent in the jungle" oncontextmenu="return false;" />
+        </div>
       </div>
-      <div class="col-lg-4 col-sm-6">
-        <img class="rounded img-thumbnail" src="./ImagesSophie/IMG_0555.jpg" alt="Jungle Shower" oncontextmenu="return false;" />
+      <div class="col-lg-4 col-sm-6 mb-4">
+        <div class="card">
+          <img class="rounded img-thumbnail" src="./ImagesSophie/IMG_0555.jpg" alt="Jungle Shower" oncontextmenu="return false;" />
+        </div>
       </div>
-      <div class="col-lg-4 col-sm-6">
-        <img class="rounded img-thumbnail" src="./ImagesSophie/IMG_0557.jpg" alt="Jungle train" oncontextmenu="return false;" />
+      <div class="col-lg-4 col-sm-6 mb-4">
+        <div class="card">
+          <img class="rounded img-thumbnail" src="./ImagesSophie/IMG_0557.jpg" alt="Jungle train" oncontextmenu="return false;" />
+        </div>
       </div>
-      <div class="col-lg-4 col-sm-6">
-        <img class="rounded img-thumbnail" src="./ImagesSophie/IMG_0018.jpg" alt="Window reflection" oncontextmenu="return false;" />
+      <div class="col-lg-4 col-sm-6 mb-4">
+        <div class="card">
+          <img class="rounded img-thumbnail" src="./ImagesSophie/IMG_0018.jpg" alt="Window reflection" oncontextmenu="return false;" />
+        </div>
       </div>
-      <div class="col-lg-4 col-sm-6">
-        <img class="rounded img-thumbnail" src="./ImagesSophie/IMG_0238.jpg" alt="City reflexion" oncontextmenu="return false;" />
+      <div class="col-lg-4 col-sm-6 mb-4">
+        <div class="card">
+          <img class="rounded img-thumbnail" src="./ImagesSophie/IMG_0238.jpg" alt="City reflexion" oncontextmenu="return false;" />
+        </div>
       </div>
-      <div class="col-lg-4 col-sm-6">
-        <img class="rounded img-thumbnail" src="./ImagesSophie/IMG_0282.jpg" alt="Old Typwriter" oncontextmenu="return false;" />
+      <div class="col-lg-4 col-sm-6 mb-4">
+        <div class="card">
+          <img class="card-img-top rounded img-thumbnail" src="./ImagesSophie/IMG_0282.jpg" alt="Typwriter" oncontextmenu="return false;">
+        </div>
       </div>
     </div>
   </section>
