--- a/contact.html
+++ b/contact.html
@@ -19,16 +19,16 @@
       <span class="w-100 d-lg-none d-block">
         <!-- hidden spacer to center brand on mobile --></span>
       <a class="navbar-brand navTitle" href="index.html"><span class="fas fa-camera-retro"></span>&nbsp; Sophie Madonna</a>
-      <a class="navbar-brand-two mx-auto d-lg-none d-inline-block" href="#">
-      </a>
+      <a class="navbar-brand navTitle ml-3" href="foyer.html"><span class="fab fa-gripfire"></span>&nbsp; Le Foyer</a>
+
       <div class="w-100 text-right">
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#myNavbar">
-          <span class="navbar-toggler-icon"></span>
+        <button class="navbar-toggler align-items-center" type="button" data-toggle="collapse" data-target="#myNavbar">
+          <span class="navbar-toggler-icon align-items-center"></span>
         </button>
       </div>
     </div>
-    <div class="collapse navbar-collapse" id="myNavbar">
-      <ul class="navbar-nav ml-auto flex-nowrap">
+    <div class="collapse navbar-collapse align-items-center" id="myNavbar">
+      <ul class="navbar-nav ml-auto flex-nowrap align-items-center">
         <li class="nav-item">
           <a href="about.html" class="nav-link m-2 menu-item nav-active">My Story</a>
         </li>
