--- a/foyer.html
+++ b/foyer.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-  <title>About Sophie Madonna</title>
+  <title>Le Foyer</title>
 
   <link rel="stylesheet" type="text/css" href="bootstrap.css">
   <link rel="stylesheet" href="static/styles/fontawesome/css/all.css">
@@ -39,28 +39,6 @@
     </div>
   </nav>
 
-  <section id="header" class="jumbotron">
-    <h1 class="intro display-2">Somme&nbsp; Bio&nbsp; Infos</h1>
-    <hr>
-  </section>
-  <div class="container">
-    <br>
-    <h1 class="display-5">How i came to love photography!</h1>
-    <br>
-    <p>I was born 1988
-      <br>
-      Then there was 98 !
-      <br>
-      Then there is Barcelona.
-      <br>
-      And now we are.
-    </p>
-    <br>
-    <blockquote class="blockquote text-center">
-      <p class="mb-0">“I live not in dreams but in contemplation of a reality that is perhaps the future.” </p>
-      <footer class="blockquote-footer">Rainer Maria Rilke</footer>
-    </blockquote>
-  </div>
 
 
   <!-- Footer -->
@@ -71,6 +49,7 @@
       <a href="https://www.benjamin-marketing-resume.com/"> Benjamin Marquis </a> © 2018 Font-Copyright: <a href="https://pixelify.net/downloads/tahu-free-script-font/"> Rizal Khurasan</a>
     </div>
   </footer>
+
 
   <!-- jQuery -->
   <script src="./JavaScript/jquery-3.3.1.js"></script>
