--- a/about.html
+++ b/about.html
@@ -14,26 +14,21 @@
 </head>
 
 <body>
-  <nav class="navbar navbar-light navbar-expand-sm fixed-top" style="background-color: #563d7c;">
-    <div class="d-flex">
-      <span class="w-100 d-lg-none d-block">
-        <!-- hidden spacer to center brand on mobile --></span>
-      <a class="navbar-brand navTitle" href="index.html"><span class="fas fa-camera-retro"></span>&nbsp; Sophie Madonna</a>
-      <a class="navbar-brand navTitle ml-3" href="foyer.html"><span class="fab fa-gripfire"></span>&nbsp; Le Foyer</a>
-
-      <div class="w-100 text-right">
-        <button class="navbar-toggler align-items-center" type="button" data-toggle="collapse" data-target="#myNavbar">
-          <span class="navbar-toggler-icon align-items-center"></span>
-        </button>
-      </div>
-    </div>
-    <div class="collapse navbar-collapse align-items-center" id="myNavbar">
-      <ul class="navbar-nav ml-auto flex-nowrap align-items-center">
+  <nav id="mainNavbar" class="navbar navbar-dark navbar-expand-sm fixed-top" style="background-color: #563d7c;">
+    <a class="navbar-brand navTitle" href="index.html"><span class="fas fa-camera-retro"></span>&nbsp; Sophie Madonna</a>
+    <button class="navbar-toggler" data-toggle="collapse" data-target="#navLinks" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navLinks">
+      <ul class="navbar-nav">
+        <li class="nav-item"><a class="navbar navTitle nav-link" href="foyer.html"><span class="fab fa-gripfire"></span>&nbsp; Le foyer</a></li>
+      </ul>
+      <ul class="navbar-nav ml-auto">
         <li class="nav-item">
-          <a href="about.html" class="nav-link m-2 menu-item nav-active">My Story</a>
+          <a href="about.html" class="nav-link">My Story</a>
         </li>
         <li class="nav-item">
-          <a href="contact.html" class="nav-link m-2 menu-item">Follow Me</a>
+          <a href="contact.html" class="nav-link">Follow Me</a>
         </li>
       </ul>
     </div>
