--- a/foyer.html
+++ b/foyer.html
@@ -34,7 +34,18 @@
     </div>
   </nav>
 
+  <section id="header" class="jumbotron">
+    <h1 class="intro display-2">What &nbsp;is &nbsp;Home &nbsp;?</h1>
+    <hr>
+  </section>
 
+  <section class="container-fluid">
+    <div class="row">
+      <div class="col-6"></div>
+      <div class="col-6"></div>
+
+    </div>
+  </section>
 
   <!-- Footer -->
   <br>
