--- a/contact.html
+++ b/contact.html
@@ -15,19 +15,21 @@
 
 <body>
   <nav id="mainNavbar" class="navbar navbar-dark navbar-expand-sm fixed-top" style="background-color: #563d7c;">
-    <a class="navbar-brand navTitle" href="index.html"><span class="fas fa-camera-retro"></span>&nbsp; Sophie Madonna</a>
+    <a class="navbar-brand navTitle mx-2" href="index.html"><span class="fas fa-camera-retro"></span>&nbsp; Sophie Madonna</a>
     <button class="navbar-toggler" data-toggle="collapse" data-target="#navLinks" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navLinks">
       <ul class="navbar-nav">
-        <li class="nav-item"><a class="navbar navTitle nav-link" href="foyer.html"><span class="fab fa-gripfire"></span>&nbsp; Le foyer</a></li>
+        <li class="nav-item mx-2">
+          <a class="navbar navTitle nav-link" href="foyer.html"><span class="fab fa-gripfire"></span>&nbsp; Le foyer</a>
+        </li>
       </ul>
       <ul class="navbar-nav ml-auto">
-        <li class="nav-item">
+        <li class="nav-item mx-2">
           <a href="about.html" class="nav-link">My Story</a>
         </li>
-        <li class="nav-item">
+        <li class="nav-item mx-2">
           <a href="contact.html" class="nav-link">Follow Me</a>
         </li>
       </ul>
