--- a/foyer.html
+++ b/foyer.html
@@ -41,17 +41,87 @@
     <hr>
   </section>
 
-  <section class="container-fluid">
-    <div class="row">
-      <div class="col-6"></div>
-      <div class="col-6"></div>
-
+  <section id="lefoyer" class="container-fluid px-0">
+    <div class="row mb-3">
+      <div class="col-12">
+        <p class="text-center">Définition (Larousse):
+          <br>
+          Du bas latin focarium (« feu »)
+          <br>
+          1. Âtre, lieu où se fait le feu.
+          <br>
+          2. (Par extension) Maison, demeure familiale, pays natal.
+          <br>
+          3. (Physique) Endroit, point où convergent des rayons émis
+          <br>
+          par une même source de lumière ou de chaleur.</p>
+      </div>
+    </div>
+    <div class="row  foyergrid">
+      <div class="col-md-6 text-justify">
+        <br>
+        <h1 class"display-5">0. Vestibule </h1>
+        <p>
+          Posséder un foyer, s’y sentir chez soi, a longtemps été primordial à mes yeux.
+          <br>
+          J'ai un moment résidé dans un appartement situé dans le sixième arrondissement de Lyon, qui appartenait à mes grands-parents.
+          <br>
+          La question du chez-soi s’est beaucoup posée au cours de ma vie dans ces lieux ; la condition pour y séjourner, édictée par mon père, était la suivante : laisser l’appartement disposé tel que mes grands-parents l’ont laissé après leur
+          mort.
+          <br>
+          J’ai du apprendre à évoluer au milieu de leurs effets personnels ; la plupart du mobilier, constitué de vieilles antiquités, n’a pas ou très peu changé de disposition depuis
+          l’installation de ma famille paternelle dans les lieux en 1957, date de construction de l’immeuble...
+        </p>
+        <div class="panel-group">
+          <div class="panel panel-default">
+            <div class="panel-heading">
+              <h4 class="panel-title">
+                <a data-toggle="collapse" href="#collapse1">Read More</a>
+              </h4>
+            </div>
+            <div id="collapse1" class="panel-collapse collapse">
+              <div class="panel-body">
+                <p>Certaines prises électriques ne sont pas aux normes ; les tapisseries, vieilles de soixante ans, commencent à se racornir et leur couleur s’affadit ; des tableaux du XIXème siècle, dessins, gravures, ou peintures de mon
+                  oncle,ainsi que vieux luminaires et autres curiosités sont accrochés au murs et viennent renforcer cette impression d’être dans un autre temps, d’être en décalage avec ce qui m’entoure. De ce fait, la présence de mes
+                  grands-parents, même de mon
+                  père et
+                  mon oncle y est encore fortement palpable. Il y a une véritable confrontation entre deux époques : ce passé familial et le présent que je tente d’apporter, amenant une forme d’anachronisme dans mon mode de vie. Outre cette première
+                  condition, je n’avais le droit d’apporter aucun mobilier de ma propriété, la maisonnée de mes grands-parents étant déjà assez bien fournie. La plupart de mes effets personnels sont restés dans un garage au pied de leur immeuble ; y
+                  sont
+                  enfermés les vestiges de ma vie d’autrefois, lorsque je possédais mon propre habitat. Les objets m’appartenant peuvent s’énumérer succinctement : livres, vê¬tements, affaires de toilette, quelques objets usuels ou de décoration,
+                  ainsi
+                  qu’un fauteuil, un tableau, une penderie et, plus récemment, un matelas. J’ai longtemps diabolisé ce lieu de vie ; y habiter fut comme une régression pour moi ; j’avais un sentiment de retour au foyer familial, à la dépendance et à
+                  l’infantilisation. Les premières années de ma vie dans cet appartement furent difficiles, justement parce que je ne devais laisser aucune trace de ma personne, ne rien apporter de ce qui constitue mon être. Ce n’est que récemment
+                  que je me
+                  suis rendue compte de la richesse que cet endroit contenait : il y a quelques mois, je suis tombée sur les diapositives de mon grand père, trésor inestimable. M’est alors venue la volonté de concentrer mon travail photographique
+                  sur mon
+                  habitat ; c’est dans une démarche autobiographique que j’ai décidé de mener ce travail, mettant en lumière mes propres questionnements quant à la définition du « chez soi » : comment s’adapter dans un lieu de vie figé dans le temps
+                  ?
+                  Comment évoluer dans un milieu qui n’est pas le sien ? A-t-on besoin de nos affaires, de notre mobilier, pour nous sentir chez nous ? Comment s’imprégner de la mémoire d’un lieu afin de se réapproprier ce dernier ? Sans prétendre
+                  apporter
+                  une réponse objective, ni complète, mais simplement un point de vue, une progression de ma pensée, mon mémoire retrace mon chemin intérieur parcouru pour parvenir enfin à habiter les lieux, voire me sentir habitée par ceux-ci.
+                  Cette
+                  progression sera évoquée en trois temps, qui reprendront chacun les trois définitions du Foyer mentionnées plus tôt : dans un premier temps, je partirai de la source ; à travers un récit autobiographique, je parlerai de ce qui a
+                  provoqué
+                  mon entrée dans cet habitat, des épreuves traversées, de mes rencontres et de mes voyages qui ont forgé ma pensée et m’ont amenée à apporter un regard neuf sur mon chez-moi ; dans un deuxième temps, je tenterai, de par mes
+                  réflexions
+                  personnelles, d’amener une définition propre du « chez-soi » ; enfin, à travers l’évocation de mon travail photographique, je mettrai en lumière le regard que je porte désormais sur mon appartement, passant de l’étonnement, la
+                  sensation de
+                  découverte sans cesse renouvelée à une forme d’allégresse.</p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="col-md-6">
+        <img class="img-fluid" src="./ImagesSophie/IMG_0206.jpg" alt="vestibule" oncontextmenu="return false;">
+      </div>
     </div>
   </section>
 
   <!-- Footer -->
   <br>
-  <footer class="page-footer font-small">
+  <footer class=" page-footer font-small">
     <!-- Copyright -->
     <div class="footer-copyright text-center py-3">© 2018 Copyright:
       <a href="https://www.benjamin-marketing-resume.com/"> Benjamin Marquis </a> © 2018 Font-Copyright: <a href="https://pixelify.net/downloads/tahu-free-script-font/"> Rizal Khurasan</a>
